cabal-version:      3.4
name:               aoc
version:            0.1.0.0
author:             Petter Nilsson
maintainer:         pettni@umich.edu

common build
    ghc-options: -Wall -O0 -g
    default-language: GHC2021

library
    exposed-modules:
        Day1,
        Day2,
        Day3,
        Day4,
        Day5,
        Day6,
        Day7,
        Day8,
        Day9,
        Day10,
        Day11,
        Day12,
        Day13,
        Day14,
        Day15,
        Day16,
        Day17
    build-depends:
        base ^>=4.17.2.0,
        containers,
        extra,
        heap,
        parsec,
        split,
        text,
        vector
    hs-source-dirs: src

executable aoc2023
    build-depends:    aoc, base ^>=4.17.2.0, text
    hs-source-dirs:   app
    main-is:          Main.hs

test-suite aoc2023-test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          test.hs
    other-modules:
        Day1Spec,
        Day2Spec,
        Day3Spec,
        Day4Spec,
        Day5Spec,
        Day6Spec,
        Day7Spec,
        Day8Spec,
        Day9Spec,
        Day10Spec,
        Day11Spec,
        Day12Spec,
        Day13Spec,
        Day14Spec,
        Day15Spec,
        Day16Spec,
        Day17Spec
    build-depends:
        aoc,
        base ^>=4.17.2.0,
        hspec,
        string-qq,
        tasty,
        tasty-hspec,
        text
    build-tool-depends:
        tasty-discover:tasty-discover
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
